Add french résumé étendu, make small summaries a bit longer

--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -15,7 +15,7 @@
 \color{white}
 
 \begin{picture}(0,0)
-\put(-152,-743){\rotatebox{90}{\Large \textsc{THESE DE DOCTORAT}}} \\
+\put(-152,-743){\rotatebox{90}{\Large \textsc{THÈSE DE DOCTORAT}}} \\
 \put(-120,-743){\rotatebox{90}{NNT : 2024UPASP001}}
 \end{picture}
 
