--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -248,7 +248,7 @@ Van den Broek et al. \parencite*{vandenBroek1999} first hypothesised that \ce{NO
 \ce{N_2} was hypothesised to be produced from the association of two adsorbed nitrogen atoms, after the de-hydrogenation process.
 Previous works mentioning oxidation of adsorbed ammonia by gas phase atoms was contradicted.
 (ii) the known roughening process of the catalyst at working conditions could not be reproduced without long working times, and high pressures.
-Kinetic studies on poly-crystalline Pt up to \qty{10}{\bar} but at temperatures below \qty{385}{\degreeCelsius} observed the roughening transition \parencite{Kraehnert2008}, which proved difficult to fit with developped kinetic models, attributed to local increase in temperature and surface area.
+Kinetic studies on poly-crystalline Pt up to \qty{10}{\bar} but at temperatures below \qty{385}{\degreeCelsius} observed the roughening transition \parencite{Kraehnert2008}, which proved difficult to fit with developed kinetic models, attributed to local increase in temperature and surface area.
 
 % DFT
 \begin{figure}[!htb]
