--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -90,12 +90,20 @@ As an example, platinum (Pt) nanoparticles are of great interest for the petroch
 \end{figure}
 
 The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle material, size, synthesis route, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{Wulff1901, Winterbottom1967, Boukouvala2021}.
-The orientation and structure of each facet on the nanoparticle surface, described by its Miller (hkl) indices, has a key role in the surface strain field and in the adsorption properties of the catalysts \parencite{Zhou2012, Wu2017, Altantzis2019, Wu2021}.
-The formation of surface oxides on specific facets of Pt-Rh nanoparticles has also been correlated with an increased activity during the oxidation of \ce{CO} \parencite{Hejral2018}.
-The morphology and shape of supported nanoparticles was shown to be linked to the type of facets present on the nano-catalyst surface \parencite{Ndolomingo2020}.
+This can be linked to the minimisation of the particle surface energy (e.g. depending on the material and facet type), and of interfacial energy.
 Between facets are the nanoparticle edges and corners, notorious for being very favourable adsorption sites due to a low local coordination geometry \parencite{Huang2008, Jiang2009}.
+
+The orientation and structure of each facet on the nanoparticle surface, described by its Miller (hkl) indices, has a key role in the surface strain, and in the adsorption properties of the catalysts \parencite{Zhou2012, Wu2017, Altantzis2019, Wu2021}.
+Surface atoms of different facets have for example different coordination numbers.
+In the case of supported nanoparticles, the initial strain in the particle can be linked not only to surface stress, but also to hetero-epitaxial stress from the relationship with the substrate.
+The morphology and shape of supported nanoparticles was shown to be linked to the type of facets present on the nano-catalyst surface \parencite{Ndolomingo2020}.
+Re-faceting can also occur induced by heterogeneous catalytic reactions, as highlighted by Vendelbo et al. \parencite*{Vendelbo2014} with the example of CO oxidation.
+
+Moreover, surface roughness can also strongly affect the electronic structure of the surface atoms, and therefore its adsorption properties \parencite{Dicke2000, Hendriksen2010, Resta2020a}.
+The formation of surface oxides on specific facets of Pt-Rh nanoparticles has also been correlated with an increased activity during the oxidation of \ce{CO} \parencite{Hejral2018}.
+
 Calle-Valejo et al. \parencite*{CalleVallejo2014, CalleVallejo2015, CalleVallejo2018, CalleVallejo2023} have used DFT calculations to show an approximate linear trend between the \textit{generalised} coordination number $\overline{CN}(i)$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
-Their work highlights the importance of taking into account not only the number of first-nearest neighbours, but also the number of second nearest neighbours.
+Their work highlights the importance of taking into account not only the number of first-nearest neighbours, but also the number of second nearest neighbours, which also underlines the importance of surface roughness.
 The \textit{Taylor ratio} translates this effect by defining the fraction between active sites and the total exposed surface \parencite{Taylor1925}.
 
 \begin{equation}
