--- a/Sections/2_Theory_Models/Introduction.tex
+++ b/Sections/2_Theory_Models/Introduction.tex
@@ -10,17 +10,21 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
 \centering
 \resizebox{\textwidth}{!}{%
     \begin{tabular}{l|l|l|l}
-        Phenomena & Technique used & Studied samples & Information \\
         \toprule
-        Scattering & Bragg Coherent & Pt particles & Shape, 3D strain \\
-        & Diffraction Imaging & \{111\}, \{110\}, \{100\}, ... & and displacement \\
-        & (BCDI) & & \\
+        Technique   & Surface x-ray             & Bragg Coherent         & X-ray Photoelectron       \\
+                    & Diffraction (SXRD)        & Diffraction Imaging    & Spectroscopy (XPS)        \\
+                    &                           & (BCDI)                 &                           \\
         \midrule
-        Scattering & Surface x-ray & Pt single crystals & Roughness, relaxation, atomic \\
-        & Diffraction (SXRD) & (111), (100) & and crystallographic phases \\
+        Sample      & Pt(111) and Pt(100)       & Isolated               & Pt(111) and Pt(100)       \\
+                    & single crystals           & Pt particles           & single crystals           \\
+                    & and Pt particles          &                        &                           \\
         \midrule
-        Absorption & X-ray Photoelectron & Pt single crystals & Species presence, \\
-        & Spectroscopy (XPS) & (111), (100) & quantity, oxidation state \\
+        Information & Surface structure,        & Shape, 3D displacement & Surface species presence, \\
+                    & roughness, relaxation \&  & and strain arrays      & quantity \& oxidation     \\
+                    & crystallographic phases   & of unique object       & state                     \\
+        \midrule
+        Beamline    & SixS (SOLEIL)             & SixS (SOLEIL)          & B-07 (Diamond Light Source) \\
+        \bottomrule
     \end{tabular}
     }
     \caption{
