--- a/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
+++ b/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
@@ -76,7 +76,7 @@ The ammonia oxidation cycle was started at \qty{300}{\degreeCelsius}, with the i
 The different atmospheres used to probe the relation between particle structure and selectivity have been introduced in tab. \ref{tab:ConditionsNanoparticles}.
 A maximum of three scans were recorded under each condition (tab. \ref{tab:ConditionsNanoparticles}) at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} for each particle to probe for any evolution of the particles surface structure during a fixed atmosphere as a function of time, and to otherwise demonstrate the reproducibility of the measurements.
 
-A 3D view of the reconstructed nanoparticles at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} during the ammonia oxidation cycle is presented in appendix \ref{app:AppendixB7}.
+A 3D view of the reconstructed nanoparticles at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} during the ammonia oxidation cycle is presented in appendix \ref{app:AppendixBCDIOperando}.
 The surface is coloured by the values of the heterogeneous out-of-plane strain as described previously in eq. \ref{eq:StrainTensorzz} at each surface voxel.
 The view perpendicular to the three axes of the laboratory frame is represented, the particles are tilted due to the incoming angle $\theta$ for the measurement of the (111) Bragg peak.
 Both the retrieved displacement and strain fields are represented with their respective colour-bars, the ammonia to oxygen ratio is represented on the right part of the figure.
@@ -117,7 +117,7 @@ Increasing the temperature to \qty{400}{\degreeCelsius} under inert atmosphere w
     \caption{
         Sum of the intensity scattered from particle \textit{B} around the (111) platinum Bragg peak in the $\vec{q}_x$, $\vec{q}_z$ and $\vec{q}_y$ directions after orthogonalisation of the diffraction pattern.
         The [111]-oriented crystal truncation rod is visible parallel to the $\vec{q}_z$ axis.
-        Detector gaps lead to reactangular areas of missing intensity.
+        Detector gaps lead to rectangular areas of missing intensity.
     }
     \label{fig:B7Ortho}
 \end{figure}
@@ -126,7 +126,7 @@ A signal parallel to the crystal truncation rod in the [111] direction is observ
 The distance between the [111] oriented rod and the second signal increases in $q_y$ during the ammonia oxidation cycle, at the end of which a third signal parallel to the two others can be observed (fig. \ref{fig:B7Ortho} - c).
 The maximum of both signals seems to be at the same value in $q_z$, which can be related to the average out-of-plane lattice parameter inside the particle.
 
-The defects are also visible perpendicularly to the particle substrate and through the particle in 3D in appendix \ref{app:AppendixB7}, ultimately resulting in holes in the Bragg electronic density \parencite{Clark2015, Dupraz2015}.
+The defects are also visible perpendicularly to the particle substrate and through the particle in 3D in appendix \ref{app:AppendixBCDIOperando}, ultimately resulting in holes in the Bragg electronic density \parencite{Clark2015, Dupraz2015}.
 
 The intensity scattered from particle \textit{B} around the (111) platinum Bragg peak was summed along the ($\vec{q}_x$, $\vec{q}_y$), ($\vec{q}_y$, $\vec{q}_z$) and ($\vec{q}_z$, $\vec{q}_x$) planes, and respectively fitted in the $\vec{q}_z$, $\vec{q}_x$ and $\vec{q}_y$ directions.
 ($\vec{x}$, $\vec{y}$, $\vec{z}$) designates the sample frame, where the $\vec{z}$ direction is parallel to the [111] direction from the epitaxy relationship of the particle on the substrate.
@@ -165,7 +165,7 @@ This signal is linked to the appearance of a defect in the particle.
 The introduction of ammonia does not have a visible effect in $\vec{q}_z$, but decreases the FWHM in both $\vec{q}_x$ and $\vec{q}_y$ in comparison to the second measurement under argon.
 Both FWHM$_x$ and FWHM$_y$ increase together with the ammonia to oxygen ratio, FWHM$_y$ plateaus when the ratio is equal to 1, whereas FWHM$_x$ largely increases when the ratio becomes equal to 8.
 
-The FWHM under argon after and before the oxidation cycle are similar at \qty{300}{\degreeCelsius} but not at \qty{400}{\degreeCelsius}, a temperature at which the oxidation cycle completely changed the shape and strain state of the particle, visible in app. \ref{app:AppendixB7}.
+The FWHM under argon after and before the oxidation cycle are similar at \qty{300}{\degreeCelsius} but not at \qty{400}{\degreeCelsius}, a temperature at which the oxidation cycle completely changed the shape and strain state of the particle, visible in app. \ref{app:AppendixBCDIOperando}.
 The particle shape is not reversible at \qty{400}{\degreeCelsius} after the oxidation cycle.
 
 \begin{SCfigure}
@@ -200,7 +200,7 @@ Here, $G$ and $L$ represent the material's Lame constants, which can be estimate
     \label{eq:GandNu}
 \end{align}
 
-The evolution of the strain field energy as a function of each scan to be able to compare with the 3D reconstructions of the particle shown in app. \ref{app:AppendixB7} is presented in fig. \ref{fig:B7SFE}.
+The evolution of the strain field energy as a function of each scan to be able to compare with the 3D reconstructions of the particle shown in app. \ref{app:AppendixBCDIOperando} is presented in fig. \ref{fig:B7SFE}.
 For a qualitative approximation of the strain field energy, the Young's modulus was taken equal to \qty{153.3}{\giga\pascal} and the Poisson ratio to \num{0.401} based on literature values at \qty{400}{\degreeCelsius} \parencite{Matthey2022}.
 
 \begin{figure}[!htb]
@@ -223,14 +223,14 @@ No changes in the particle strain and structure as a function of the ammonia to 
 
 The most important changes in the particle structure occur at \qty{400}{\degreeCelsius}.
 Heating the sample under inert atmosphere has resulted in the appearance of a defect visible directly in reciprocal space (fig. \ref{fig:B7Ortho}), and by the evolution of FWHM$_y$ (fig. \ref{fig:B7FWHM}).
-The increase of strain inside the particle is also visible in 3D by the progressive importance of holes in the reconstructed volume (app. \ref{app:AppendixB7}), and by the evolution of the strain field energy (fig. \ref{fig:B7SFE}).
+The increase of strain inside the particle is also visible in 3D by the progressive importance of holes in the reconstructed volume (app. \ref{app:AppendixBCDIOperando}), and by the evolution of the strain field energy (fig. \ref{fig:B7SFE}).
 Interestingly, a transition is observed during the simultaneous presence of both ammonia and oxygen in the reactor, when \ce{O_2}/\ce{NH_3} = 1 (scans 3951, 3958 and 4002).
 This transition is also visible in FWHM$_z$ (fig. \ref{fig:B7FWHM}), which can be related to an increase of the out-of-plane strain inside the particle.
 
 \subsubsection{Particle C}
 
 As mentioned earlier, particle \textit{C} could only be reconstructed under the presence of ammonia in the reactor.
-Interestingly, no changes in the particle shape or surface strain values have been observed during the exposition to the reactants (appendix \ref{app:AppendixB7}).
+Interestingly, no changes in the particle shape or surface strain values have been observed during the exposition to the reactants (appendix \ref{app:AppendixBCDIOperando}).
 
 \begin{figure}[!htb]
     \centering
@@ -248,7 +248,7 @@ Interestingly, no changes in the particle shape or surface strain values have be
 When removing ammonia and oxygen at \qty{300}{\degreeCelsius}, the particle could not be reconstructed anymore, reproducing the same behaviour as before the introduction of ammonia.
 Increasing the temperature to \qty{400}{\degreeCelsius} did not improve the reconstruction quality as the support did not converge during phase retrieval.
 Using the support of the particle reconstructed at \qty{300}{\degreeCelsius} under ammonia as a starting guess for the algorithms did not suffice to reach a good final solution.
-The reconstructions under inert atmosphere before introducing ammonia or after removing both reactants from the cell presented in appendix \ref{app:AppendixB7} have been performed by limiting the support update to every 200 iteration (for a total of 1100 algorithm iteration during phase retrieval, meaning that the support is only changed 5 times), and still present a highly heterogeneous Bragg electronic density.
+The reconstructions under inert atmosphere before introducing ammonia or after removing both reactants from the cell presented in appendix \ref{app:AppendixBCDIOperando} have been performed by limiting the support update to every 200 iteration (for a total of 1100 algorithm iteration during phase retrieval, meaning that the support is only changed 5 times), and still present a highly heterogeneous Bragg electronic density.
 
 To understand why it was impossible to successfully carry out the phase retrieval process, the diffraction pattern around the (111) Bragg peak under the presence of both reacting gases and after their removal was orthogonalised in $q$-space, presented in fig. \ref{fig:D6Ortho}.
 
@@ -294,7 +294,7 @@ Returning to argon atmosphere, \textit{i.e.} removing ammonia and oxygen yields 
 The evolution of the $d_{111}$ interplanar spacing (fig. \ref{fig:D6Latpara}) is not the same as a function of different temperatures.
 The interplanar spacing of the particle under the sole presence of ammonia at \qty{300}{\degreeCelsius} is remarkably reproducible with all three measurements yielding approximately the same value as under argon atmosphere.
 A large increase of the interplanar spacing is observed when oxygen is introduced in the reactor, at a ratio of \num{0.5} with ammonia, which gives a homogeneous strain evolution of approximately \qty{0.07}{\percent} in reference to the value measured at room temperature.
-The strain at the interface with the substrate also becomes more homogeneous at this condition, slightly negative (appendix \ref{app:AppendixD6}).
+The strain at the interface with the substrate also becomes more homogeneous at this condition, slightly negative (appendix \ref{app:AppendixBCDIOperando}).
 The interplanar spacing then stays approximately the same at \qty{300}{\degreeCelsius} during the oxidation cycle.
 This transition is not observed at \qty{400}{\degreeCelsius}, a temperature for which an increase of the interplanar spacing can be observed under argon, without any large deviations during the oxidation cycle.
 
@@ -317,7 +317,7 @@ The diffraction pattern was shown to not be exactly reproducible when returning 
 
 The transition can be observed in both the strain field energy (fig. \ref{fig:D6SFE}), and in the FWHM of the three-dimensional Bragg peak (fig. \ref{fig:D6FWHM}).
 The interplanar spacing computed from the position of the Bragg peak in $q$-space shows an additional transition when first introducing oxygen in the cell, not visible in the strain field energy or in the FWHMs, which can tentatively be linked to a change of strain at the interface with the substrate.
-% The influence of the introduction of oxygen on the interfacial strain is unclear since no clear and reproducible evolution of the facet strain is visible on the particle surface (app. \ref{app:AppendixD6}).
+% The influence of the introduction of oxygen on the interfacial strain is unclear since no clear and reproducible evolution of the facet strain is visible on the particle surface (app. \ref{app:AppendixBCDIOperando}).
 % The values of the heterogeneous surface strain $\epsilon_{zz}$ being very low (almost always below \qty{0.1}{\percent}, fig. \ref{fig:D6Facets}), it is also complicated to quantify the strain evolution.
 
 \subsubsection{Mass spectrometry results}
