--- a/Sections/3_Results_Nanoparticles/BCDITempRamp.tex
+++ b/Sections/3_Results_Nanoparticles/BCDITempRamp.tex
@@ -293,7 +293,7 @@ This isotropic \textit{homogeneous} strain ($\epsilon_{hmg}$) in the particle is
     \label{fig:AmaterasuHomoStrain}
 \end{figure}
 
-It is of utmost importance to first study the evolution of the material under an inert atmosphere to differ evolutions of the homogeneous strain due to the thermal expansion of the crystal from for example the adsorption of molecules involved in the catalytic reaction.
+It is of utmost importance to first study the evolution of the material under an inert atmosphere to differ evolution of the homogeneous strain due to the thermal expansion of the crystal from for example the adsorption of molecules involved in the catalytic reaction.
 The average interplanar spacing between \{111\} crystallographic planes ($d_{111}$) in the particle is computed from the Bragg peak position in $q$-space \textit{via} eq. \ref{eq:QandD3}, presented in fig. \ref{fig:AmaterasuHomoStrain}.
 Repeated measurements at fixed condition yield additional data points in the figure.
 
@@ -305,7 +305,7 @@ Utilising the (111) Bragg peak in the current specular geometry can only bring i
 Homogeneous in-plane lattice distortions in $\vec{x}$ and $\vec{y}$ (\textit{i.e.} [$\bar{1}$01] and [1$\bar{2}$1], fig. \ref{fig:StereoTop}) are invisible in this study.
 The rocking curves presented in fig. \ref{fig:AmaterasuHomoStrain} (a) were fitted with a Lorentzian model (fig. \ref{fig:AmaterasuHomoStrain} - b) to retrieve the peak full width at half maximum in the $\vec{z}$ direction (FWHM$_z$).
 The flash annealing and removal of the dislocation at \qty{150}{\degreeCelsius} had the effect of increasing the average interplanar spacing $d_{111}$, and decreasing FWHM$_z$, which can be linked to a decrease of heterogeneous out-of-plane strain inside the particle \parencite{Warren1990}.
-In this discussion, variations in the FWHM are qualitatively attributed to the particle heterogenous strain.
+In this discussion, variations in the FWHM are qualitatively attributed to the particle heterogeneous strain.
 Other effects may contribute such as changes of particle size, but the 3D reconstructions show that the particle has a stable size.
 
 The particle was realigned after the removal of the dislocation to be sure of the absence of any angular offset, the flash heating process possibly moving the sample positions from thermal expansion.
