--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -64,7 +64,7 @@ The surface coverage of \{110\} facets is also four times higher than for partic
 Heating the sample to \qty{300}{\degreeCelsius} has decreased the visible presence of facets on the particle surface.
 While particle \textit{C} observes a large decrease of heterogeneous strain during the introduction of ammonia, particle \textit{B} suffers both a large increase of homogeneous strain with respect to the room temperature interplanar spacing (fig. \ref{fig:B7Latpara}, up by \qty{0.09}{\percent}), together with an increase of the in-plane heterogeneous strain (fig. \ref{fig:B7FWHM}).
 This effect is not reversible when removing ammonia from the reactor at \qty{300}{\degreeCelsius}, nor it is observed again when introducing ammonia at \qty{400}{\degreeCelsius}.
-It is possible to link this phenomenom to the particle first exposition to reducing atmosphere after argon and air.
+It is possible to link this phenomenon to the particle first exposition to reducing atmosphere after argon and air.
 The absence of strain evolution in the same condition for particle \textit{C} (fig. \ref{fig:D6Latpara}) can be attributed to different surface states under argon from contaminants/oxides, linked to different facet coverage.
 The introduction of oxygen slightly decreases the heterogeneous strain in the particle (fig. \ref{fig:B7FWHM}), the in-plane heterogeneous strain is stable during the oxidation of ammonia while the out-of-plane heterogeneous strain increases slightly.
 Thus, small changes are already visible at \qty{300}{\degreeCelsius} for particle \textit{B} during the oxidation of ammonia.
