--- a/Sections/3_Results_Nanoparticles/SXRDNanoparticles.tex
+++ b/Sections/3_Results_Nanoparticles/SXRDNanoparticles.tex
@@ -16,7 +16,7 @@ To ensure that the \ce{Al_2O_3} supported particles have the expected epitaxial 
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/PhDScripts/SixS_2021_03_SXRD_NH3/figures/map/qxqyqz_38_40.pdf}
+    \includegraphics[page=4, width=\textwidth]{/home/david/Documents/PhD/PhDScripts/SixS_2021_03_SXRD_NH3/figures/map/qxqyqz_38_40.pdf}
     \caption{
         In-plane reciprocal space map at room temperature.
         Starting from the centre of the map are (i) six $(2\bar{1}\bar{1}0)$-type Bragg peak from the substrate.
@@ -145,14 +145,14 @@ Efforts were then focused on resolving the CTR signal around the Bragg peaks com
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/PhDScripts/SixS_2021_03_SXRD_NH3/figures/facets/facets_together.pdf}
+    \includegraphics[page=1, width=\textwidth]{/home/david/Documents/PhD/PhDScripts/SixS_2021_03_SXRD_NH3/figures/facets/FacetsTogether.pdf}
     \caption{
         Reciprocal space volume around the $(\bar{1}11)$ Bragg peak, collected at \qty{300}{\degreeCelsius}, under argon atmosphere.
         a) Projection perpendicular to $\vec{q}_z$.
-        The three white dashed line are respectively a projection in the $(\vec{q}_x, \vec{q}_y)$ plane of the $[\bar{1}11]$, $[\bar{1}10]$ and $[010]$ directions.
+        The three dashed line are respectively a projection in the $(\vec{q}_x, \vec{q}_y)$ plane of the $[\bar{1}11]$, $[\bar{1}10]$ and $[010]$ directions.
         b-c) Slices in the $(\vec{q}_y, \vec{q}_z)$ plane after rotation of the $\vec{q}_x$ and $\vec{q}_y$ axis around the $\vec{q}_z$ axis by \ang{30} and \ang{60} to highlight the presence of crystal truncation rods in different directions.
         d) Slice in the $(\vec{q}_y, \vec{q}_z)$ plane to highlight the presence of a crystal truncation rod in the $[1\bar{1}1]$ direction.
-        The interval delimited by the vertical white dashed lines in (b-c-d) is used for the qualitative analysis of the CTRs intensities.
+        The interval delimited by the vertical black dashed lines in (b-c-d) is used for the qualitative analysis of the CTRs intensities.
     }
     \label{fig:FacetMaps}
 \end{figure}
@@ -160,10 +160,11 @@ Efforts were then focused on resolving the CTR signal around the Bragg peaks com
 A volume of the reciprocal space was collected around the ($\bar{1}$11) Bragg peak to find the direction of the observed facet signals, and to quantify their evolution as a function of the different conditions.
 Similar experiments have shown the oxygen-induced shape transformation of rhodium \parencite{Nolte2008}, or platinum nanoparticles \parencite{Hejral2013}, which was also linked to the presence of surface oxides.
 The data was computed in $q$-space with different in-plane offsets, so that each rod observed in fig. \ref{fig:FacetMaps} (a) becomes parallel to the $\vec{q}_x$ direction for a certain in-plane offset, thereby facilitating the data analysis.
+A figure without patches is available in app. \ref{fig:FacetMapsNotPatched}, where the rods are more visible.
 
 Beside the crystal truncation rods, there are two different parasitic signals going through the Bragg peak.
-First, a curved signal almost parallel to $\vec{q}_y$ extends from $q_y = \qtyrange{-2.80}{-2.40}{\per\angstrom}$ in the ($\vec{q}_x, \vec{q}_y$) plane (in red in fig. \ref{fig:FacetMaps} - a).
-This signal comes from scattered x-rays difusing towards the detector in position near the Bragg peak, and increasing the background signal.
+First, a curved signal almost parallel to $\vec{q}_y$ extends from $q_y = \qtyrange{-2.80}{-2.40}{\per\angstrom}$ in the ($\vec{q}_x, \vec{q}_y$) plane (near the white dashed line in fig. \ref{fig:FacetMaps} - a).
+This signal comes from scattered x-rays diffusing towards the detector in position near the Bragg peak, and increasing the background signal.
 Secondly, a very intense powder ring ($\approx \num{1e2}$) can be seen around the crystal truncation rod perpendicular to $\vec{q}_z$, especially in fig. \ref{fig:FacetMaps} (c).
 
 \begin{figure}[!htb]
@@ -205,7 +206,7 @@ Despite the high intensity parasitic signal, it was possible to determine the or
 From these results, the average shape of the particles on the sample is expected to be highly faceted, with not only small (\{100\}, \{110\}, \{111\}) but also high indices facets (\{113\}) present on their surface.
 
 The intensity of the crystal truncation rods listed above was studied by measuring the scattered intensity as a function of $q_z$ in a square area in the ($\vec{q}_x, \vec{q}_y$) plane.
-The same width was used for each study, the region of integration is detailed in fig. \ref{fig:FacetMaps} - (b-c-d) with white dashed lines.
+The same width was used for each study, the region of integration is detailed in fig. \ref{fig:FacetMaps} - (b-c-d) with black dashed lines.
 The evolution of the integrated scattered intensity as a function of $q_z$ is presented if fig. \ref{fig:FacetSignal} for different atmospheres and temperatures.
 
 The scattered intensity does not evolve at \qty{300}{\degreeCelsius} and \qty{500}{\degreeCelsius} as a function of the atmosphere in the reactor cell.
