--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -23,6 +23,7 @@ Transient structures were observed at low oxygen pressure, which disappeared in 
 % CTR
 The measurement of crystal truncation rods revealed more important intensity changes on the Pt(100) surface (fig. \ref{fig:CTRPt100}) in comparison with the Pt(111) surface during the oxidation cycle (fig. \ref{fig:CTRPt111}).
 For both surfaces (fig. \ref{fig:CTRFit111} - a, \ref{fig:CTRFit100} - a), the maximal roughness value is reached during exposition to high oxygen atmosphere, consistent with the formation of oxides under oxygen pressure.
+An important surface roughness can result in the formation of a large variety of surface sites, affecting the catalytic properties of the surface atoms due to the important change of local environments \parencite{Hendriksen2010, CalleVallejo2014, CalleVallejo2018}.
 Out-of-plane surface strain on Pt(111) was estimated to be contained on the topmost atomic layer, the presence of surface oxide structures was associated with compressive strain with respect to the initial values under argon atmosphere (fig. \ref{fig:CTRFit111} - b).
 The influence of bulk \ce{Pt_3O_4} grown on Pt(100) under high oxygen atmosphere on the surface strain was not yet estimated, a lower oxygen atmosphere was related to compressive out-of-plane strain.
 \ce{Pt_3O_4} was shown to not grow in a homogeneous layer, but rather in terms of islands with different thickness (fig. \ref{fig:CTRFitHighOxygen}).
