--- a/Sections/5_Conclusion/Conclusion.tex
+++ b/Sections/5_Conclusion/Conclusion.tex
@@ -2,11 +2,10 @@
 
 This thesis was aimed at understanding, \textit{operando}, the evolution of catalysts surfaces during ammonia oxidation.
 To do so, mainly three techniques have been used, Bragg coherent diffraction imaging, surface x-ray diffraction, and x-ray photoelectron spectroscopy, combined with mass spectrometry measurements.
-These techniques are compatible with near-ambient pressure consitions, allowing to reduce the pressure gap in heterogeneous catalysis.
+These techniques are compatible with near-ambient pressure conditions, allowing to reduce the pressure gap in heterogeneous catalysis.
 To bridge the material gap, large Pt nanoparticles and single crystals were used.
 Throughout this work, low \ce{O_2}/\ce{NH_3} partial pressure ratios and temperatures were linked with selectivity towards \ce{N_2}, whereas high \ce{O_2}/\ce{NH_3} ratios and temperatures were linked to an increased selectivity towards \ce{NO} and \ce{N_2O}.
 This is consistent with the reaction selectivity reported for industrial catalysts, which supports the use of nanoparticles and single crystals as model catalysts to improve the system understanding.
-%at demonstrating the importance of combining different synchrotron techniques to
 
 Pt nanoparticles epitaxied on sapphire were first measured at \qtylist{300;500;600}{\degreeCelsius} with SXRD during ammonia oxidation, starting with the introduction of ammonia in the reactor, and followed by a progressive increase of the oxygen pressure (\ce{O_2}/\ce{NH_3} = \{0, 0.5, 1, 2, 8\}).
 The average shape of the Pt nanoparticles is mainly constituted of \{111\}, \{110\}, \{100\} and \{113\} facets.
@@ -18,7 +17,6 @@ A dislocation present at the interface from room temperature to \qty{125}{\degre
 This dislocation was shown to have an impact of the thermal relaxation of the particle.
 The \{111\} facets close to the interface evolve between \{211\}, \{221\} and \{110\} facets as a function of the sample temperature, and interfacial strain.
 The introduction of ammonia in the reactor at \qty{600}{\degreeCelsius} resulted in a reversal of the facet strain, likely at the origin of the creation of an interfacial dislocation network, highlighting the link between facet and interfacial strain in nanoparticles.
-% plays a dominant role in the shape evolution of the partilce. Upon temperature changes and migrates, inducing evolution into the exposed facets: from 111 towards 211, 221 and 110. The newly generated facets also evolve as funcrion of the chemistry present in the reactor.
 
 Two additional nanoparticles were measured at \qtylist{300;400}{\degreeCelsius} during ammonia oxidation.
 Different behaviours were revealed on the two nanoparticles, that exhibit a different size, shape, facet coverage, and initial strain state.
@@ -33,7 +31,6 @@ The appearance of a defect at \qty{400}{\degreeCelsius} was linked to a non-reve
 This structural evolution is clearly visible in 3D, with volumes of missing Bragg electronic density.
 The presence of defects could have a prominent role in the catalyst strain field and thus catalytic properties.
 A global activation of the catalyst at \qtylist{300;400}{\degreeCelsius} was reported while the \ce{O_2}/\ce{NH_3} ratio was kept equal to 2, with an increased production of \ce{NO}, and in a lesser extent \ce{N2O}, at the detriment of \ce{N2}.
-% Such an activation was not measured under similar conditions on a sample with a higher particle coverage, used during SXRD experiments.
 
 To better understand the role of each facet in the behaviour of the Pt nanoparticles, SXRD and XPS experiments were carried out at \qty{450}{\degreeCelsius} on Pt(111) and Pt(100) single crystals.
 The samples were first exposed to high oxygen atmosphere (\qty{80}{\milli\bar}) to oxidise the Pt surfaces (total pressure always kept to \qty{500}{\milli\bar} by the use of argon for SXRD).
@@ -45,7 +42,7 @@ Bulk \ce{Pt_3O_4} was identified on Pt(100), in a Pt(100)-($2\times2$) arrangeme
 Signals shifted in reciprocal space in comparison to the \ce{Pt_3O_4} peaks are also measured.
 Both the \ce{Pt_3O_4} and shifted peaks were measured \qty{1}{\hour} after the introduction of oxygen, but could not be detected under a reduced oxygen atmosphere (\qty{5}{\milli\bar}), even after several hours.
 Transient signals are measured instead, underlying the importance of the oxygen pressure in the surface oxidation.
-Bulk \ce{Pt3O4} was not observed on Pt(100).
+Bulk \ce{Pt3O4} was not observed on Pt(111).
 Nevertheless, a Pt(111)-($8\times8$) commensurate superstructure was clearly identified after \qty{9}{\hour}\qty{30}{\minute} of elapsed time under high oxygen atmosphere, and after \qty{23}{\hour}\qty{30}{\minute} under reduced oxygen atmosphere.
 From the intensity distribution of the related out-of-plane signals, this structure was determined to be a few layers thick.
 Additional in-plane signals are also detected as soon as oxygen is introduced in the reactor, at both pressures, linked to a Pt(111)-($6\times6$)-R\ang{\pm 8.8} structure.
@@ -75,33 +72,14 @@ Therefore, the change of strain between reacting conditions becomes difficult to
 Another factor to take into account is the increased surface roughness linked to high oxygen pressure, which has the effect of decreasing the intensity of the scattered photons far from the Bragg peak, and will thus reduce the experimental resolution.
 Additional high-resolution studies could contribute to understanding the effect of adsorbates on surface relaxation.
 
-% From SXRD results, it is clear that the \{111\} and \{100\} facets are expected to have different structural evolution during the reaction as a function of the \ce{O2}/\ce{NH3} ratio.
-% For example, the difference in strain between both reacting conditions is clear when only ammonia is present in the reactor
-% Maybe due to pre oxidation of the surface, not same temperature
-% However, no such effect was observed on particle \textit{C}, for which \qty{10}{\percent} of the surface is occupied by \{100\} facets, and \qty{35}{\percent} of the surface by \{111\} facets.
-% Particle \textit{B} has the same coverage of \{100\} and \{111\} facets, but with additionally \num{4} times more surface occupied by \{110\} facets (\qty{23}{\percent} vs \qty{6}{\percent}), and \{113\} facets, not present on particle \textit{B}.
-% The difference of behaviour between the two nanoparticles during ammonia oxidation can only correctly be addressed with SXRD and XPS data for all facets.
-% It is otherwise difficult to decorrelate the impact of defects on the particles adsorption properties due from the presence of \{113\} facets.
-% or 110 facets also not the same coverage
-% Nevertheless, an important difference in selectivity was observed with surface techniques, linked to surface oxidation.
-% Future studies must be able to resolve the importance of structural defects and oxide formation at high pressure during the reaction.
-% The insight gained from SXRD will help pilot future BCDI experiments on Pt nanoparticles.
-
-% First and foremost, this series of experiments has put into evidence the importance of combining complementary techniques together with different samples when studying heterogeneous catalysis.
-
 The thesis demonstrates the importance of combining structural measurements at both the individual particle and particle assembly levels.
-With Bragg coherent diffraction imaging (BCDI), we have demonstrated that depending on the morphology (shape, size, facet type and coverage,\textit{etc.}) of the Pt particles, the structure (strain, morphology, defects) evolves differently during the ammonia oxidation.
+With Bragg coherent diffraction imaging (BCDI), we have demonstrated that depending on the morphology (shape, size, facet type and coverage, \textit{etc.}) and initial strain state of the Pt particles, different structural evolutions are observed (in terms of strain, morphology, and defects) during the ammonia oxidation.
 A better representation of the different behaviours followed by Pt particles during reaction, by measuring multiple individual particles, appears mandatory for a comprehensive understanding of the structure-activity relationship.
 It is noteworthy that the strain at the particle/support interface seems to exert a pronounced influence on the particle behaviour.
 Nanoparticles serve as a platform to explore the simultaneous structural evolution of diverse crystallographic facets at once.
 Single crystal studies allow to better isolate the behaviours of single facets on nanoparticles.
 
 \section{Perspectives}
-% Resolve CTR from facets
-
-% Measuring different Bragg peaks corresponding to the substrate at each temperature, together with CTRs recorded in the direction perpendicular to the substrate could have provided a better idea of the interfacial structure.
-% However, as discussed in the previous section, it is complicated to differ the contribution of the CTRs linked to the substrate surface from those linked to the (111) and ($\bar{1}\bar{1}\bar{1}$) nanoparticle surface.
-% Additional simulations of the particle equilibrium shape and the impact of interfacial defects can provide a better understanding of the structural dynamics at work.
 
 This thesis has underlined the importance of bridging the material gap, by combining model catalysts with samples approaching the shape of industrial samples.
 The structure evolution of Pt nanoparticles was shown to strongly depend on their size, shape, facet coverage and initial strain state.
