--- a/Sections/6_Appendix/Nanoparticles.tex
+++ b/Sections/6_Appendix/Nanoparticles.tex
@@ -48,6 +48,18 @@
 
 \begin{figure}[!htb]
     \centering
+    \includegraphics[page=2, width=\textwidth]{/home/david/Documents/PhD/PhDScripts/SixS_2021_03_SXRD_NH3/figures/facets/FacetsTogether.pdf}
+    \caption{
+        Reciprocal space volume around the $(\bar{1}11)$ Bragg peak, collected at \qty{300}{\degreeCelsius}, under argon atmosphere.
+        a) Projection perpendicular to $\vec{q}_z$.
+        b-c) Slices in the $(\vec{q}_y, \vec{q}_z)$ plane after rotation of the $\vec{q}_x$ and $\vec{q}_y$ axis around the $\vec{q}_z$ axis by \ang{30} and \ang{60} to highlight the presence of crystal truncation rods in different directions.
+        d) Slice in the $(\vec{q}_y, \vec{q}_z)$ plane to highlight the presence of a crystal truncation rod in the $[1\bar{1}1]$ direction.
+    }
+    \label{fig:FacetMapsNotPatched}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/PhDScripts/SixS\_2021\_01/FacetAnalyser/FacetDispEvolution.pdf}
     \caption{
         Mean value and standard deviation of the displacement ($\vec{u}_{\hat{q_z}}$) distribution as a function of the angle between the normal of each facet on the particle surface and the [111] direction.
