--- a/main.tex
+++ b/main.tex
@@ -210,15 +210,17 @@
 
     \input{Sections/00_Title_Saclay}
     \newpage
-    \input{Sections/99_2eme_couverture}
+    \input{Sections/2eme_couverture}
 
     % Optional Chapters
-    %     \chapter*{Dedication}
-    %     \input{Sections/0_Dedication}
-    %     \chapter*{Declaration}
-    %     \input{Sections/0_Declaration}
-    %     \chapter*{Acknowledgements}
-    %     \input{Sections/0_Acknowledgements}
+        \chapter*{Dedication}
+        \input{Sections/0_Dedication}
+        \chapter*{Declaration}
+        \input{Sections/0_Declaration}
+        \chapter*{Acknowledgements}
+        \input{Sections/0_Acknowledgements}
+        \chapter*{Résumé étendu en français}
+        \input{Sections/FrenchSummary}
 
     \frontmatter
     {\hypersetup{linkcolor=black}
@@ -265,9 +267,6 @@
     ]
 
     \begin{appendices}
-    % \chapter{Diffraction vocabulary}
-    % \input{Sections/6_Appendix/DiffractionVocab}
-
     \chapter{Nanoparticles study}
     \input{Sections/6_Appendix/Nanoparticles}
     \input{Sections/6_Appendix/3D_Operando}
@@ -276,6 +275,7 @@
     \input{Sections/6_Appendix/Pt111}
     \input{Sections/6_Appendix/Pt100}
     \input{Sections/6_Appendix/Comparison}
+
 \end{appendices}
 
 \end{document}
